--- a/Asynchronous Javascript/index.html
+++ b/Asynchronous Javascript/index.html
@@ -29,9 +29,11 @@
         </article>
         -->
       </div>
-      <!-- <button class="btn-country">Where am I?</button> -->
       <div class="images"></div>
     </main>
-    </section>
+    <div class="button">
+      <button class="btn-country">Where am I?</button>
+    </div>
+  </section>
   </body>
 </html>
